/system/getServerInfo 获取服务器信息
