# router/system/sys_system.go
@@ -2,11 +2,16 @@ package system
 
 import (
 	"github.com/gin-gonic/gin"
+	v1 "github.com/lxhcaicai/gin-vue-admin/server/api/v1"
 	"github.com/lxhcaicai/gin-vue-admin/server/middleware"
 )
 
 type SysRouter struct{}
 
 func (s *SysRouter) InitSystemRouter(Router *gin.RouterGroup) {
-	Router.Group("system").Use(middleware.OperationRecord())
+	sysRouter := Router.Group("system").Use(middleware.OperationRecord())
+	systemApi := v1.ApiGroupApp.SystemApiGroup.SystemApi
+	{
+		sysRouter.POST("/getServerInfo", systemApi.GetServerInfo)
+	}
 }
